fix invisible theme buttons

--- a/Assessments.Frontend.Web/wwwroot/css/site.css
+++ b/Assessments.Frontend.Web/wwwroot/css/site.css
@@ -875,6 +875,10 @@ button {
     vertical-align: baseline;
 }
 
+.themeselectordropdown .themebutton {
+    color: #000;
+}
+
 .themebutton .material-icons {
     vertical-align: middle;
 }
